# neural-networks

./: .gitignore  README.md  REAMDE.md  brainstorm.md  constants.json  overview.md  pyproject.toml
MNIST/: from-scratch.ipynb  with-torch.ipynb
chains/: ReAct.ipynb  chain-of-action.ipynb  intent.py
clustering/: README.md  expander.ipynb  follow-ups.ipynb  gpt-3.ipynb
fns/: __init__.py  artifactory_fns.py  azure_fns.py  graph_construction.py  intent.py  keyvault.py  main.py  markdown_fns.py  openai_fns.py  rag_fns.py  regex_fns.py  soup_fns.py  store.py  utils.py
intent/: README.md  better-questions.ipynb  intent.ipynb
notebooks/: agent-ReAct.ipynb  agent-chain-of-action.ipynb  agent-intent-test.ipynb  agent-operator.ipynb  agent-planner.ipynb  disambiguation-cluster.ipynb  disambiguation-llm.ipynb  graph-construct-test.ipynb  learn-nn-mnist.ipynb  stub-mentor.ipynb
test/: README.md
tools/: __init__.py  api_mocker.py  brave_search.py  is_done.py  json_fix.py  page_scraper.py  payloader.py  pick.py  vector_search.py
